Fix sponsor logo overflow

--- a/client/views/sponsors/sponsors.import.less
+++ b/client/views/sponsors/sponsors.import.less
@@ -45,14 +45,9 @@
 	// 	max-width: 200px;
 	// }
 
-	#sponsor-logos {
+    .logos {
 		margin: 20px;
-		max-height: 100px;
-	}
-
-	#partner-logos {
-		margin: 20px;
-	}
+    }
 
 	.sponsor-title {
 		margin-top: 40px;
